Se arreglaron unos pequeños errores y elimine la carpeta

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </nav>
-      <img src="imagen.jpg" alt="" width="700" height="450">
+      <img src="207.jpg" alt="" width="700" height="450">
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum dignissimos, aperiam fugit, hic eos optio quae nobis quasi dolorem corrupti incidunt doloribus atque sunt omnis, officia alias consequatur maiores eveniet accusantium mollitia facilis illum neque. Laudantium, vel deserunt, sed ea maxime eveniet atque eaque voluptatibus quia beatae nobis unde officiis repudiandae sit minima animi tenetur! Blanditiis repellat doloribus corporis!</p>
 </body>
 </html>
